fixed the view of the bar chart on mobile

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -14,6 +14,8 @@
 
     .bar-container {
         display: none;
+        width: 350px;
+        translate: 0 40px;
     }
 
     .map-container {
