--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,6 +189,8 @@ form button {
   }
   .bar-container {
     display: none;
+    width: 350px;
+    translate: 0 40px;
   }
   .map-container {
     min-width: auto;
